--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
         "c:\\JavaFX\\javafx-sdk-20.0.1\\lib\\javafx.web.jar",
         "c:\\JavaFX\\javafx-sdk-20.0.1\\lib\\javafx-swt.jar"
     ],
-    "java.debug.settings.onBuildFailureProceed": true
+    "java.debug.settings.onBuildFailureProceed": true,
+    "java.project.sourcePaths": ["src"]
 }
